--- a/META.yml
+++ b/META.yml
@@ -14,7 +14,7 @@ build_requires:
 configure_requires:
   Module::Build: '0'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4205, CPAN::Meta::Converter version 2.142060'
+generated_by: 'Module::Build version 0.4205, CPAN::Meta::Converter version 2.150005'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,7 +23,7 @@ name: App-MFILE-WWW
 provides:
   App::MFILE::WWW:
     file: lib/App/MFILE/WWW.pm
-    version: '0.137'
+    version: '0.138'
   App::MFILE::WWW::Resource:
     file: lib/App/MFILE/WWW/Resource.pm
 requires:
@@ -46,5 +46,6 @@ requires:
   Web::Machine: '0.15'
   perl: '5.012'
 resources:
-  license: http://opensource.org/licenses/BSD-3-Clause
-version: '0.137'
+  license: http://opensource.org/licenses/bsd-license.php
+version: '0.138'
+x_serialization_backend: 'CPAN::Meta::YAML version 0.012'
