--- a/META.yml
+++ b/META.yml
@@ -23,7 +23,9 @@ name: App-MFILE-WWW
 provides:
   App::MFILE::WWW:
     file: lib/App/MFILE/WWW.pm
-    version: '0.139'
+    version: '0.140'
+  App::MFILE::WWW::Dispatch:
+    file: lib/App/MFILE/WWW/Dispatch.pm
   App::MFILE::WWW::Resource:
     file: lib/App/MFILE/WWW/Resource.pm
 requires:
@@ -47,5 +49,5 @@ requires:
   perl: '5.012'
 resources:
   license: http://opensource.org/licenses/bsd-license.php
-version: '0.139'
+version: '0.140'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.012'
