cleanup: remove all mentions of REST
REST is not required to use mfile-www effectively.

Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/share/config/WWW_Message_en.conf
+++ b/share/config/WWW_Message_en.conf
@@ -34,6 +34,6 @@
 # WWW_Message_en.pm
 #
 #-------------------------------------------------------------#
-REST_AUTH_FAIL
-REST authorization failed (%s)
+MFILE_WWW_AUTH_FAIL
+Authorization failed (%s)
 
