--- a/META.yml
+++ b/META.yml
@@ -23,7 +23,7 @@ name: App-MFILE-WWW
 provides:
   App::MFILE::WWW:
     file: lib/App/MFILE/WWW.pm
-    version: '0.146'
+    version: '0.147'
   App::MFILE::WWW::Dispatch:
     file: lib/App/MFILE/WWW/Dispatch.pm
   App::MFILE::WWW::Resource:
@@ -32,6 +32,7 @@ requires:
   App::CELL: '0.194'
   App::MFILE: '0.17'
   File::ShareDir: '1.00'
+  File::Temp: '0'
   Getopt::Long: '0'
   JSON: '0'
   LWP::UserAgent: '0'
@@ -49,5 +50,5 @@ requires:
   perl: '5.012'
 resources:
   license: http://opensource.org/licenses/bsd-license.php
-version: '0.146'
+version: '0.147'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.012'
