--- a/META.yml
+++ b/META.yml
@@ -3,52 +3,51 @@ abstract: 'Web UI development toolkit with prototype demo app'
 author:
   - 'Nathan Cutler <ncutler@suse.cz>'
 build_requires:
-  App::CELL: '0.194'
-  App::MFILE: '0.17'
-  HTTP::Request: '0'
-  Plack::Session: '0'
-  Plack::Test: '0'
-  Scalar::Util: '0'
-  Test::Fatal: '0'
-  Test::JSON: '0'
+  App::CELL: 0.194
+  App::MFILE: 0.17
+  HTTP::Request: 0
+  Plack::Test: 0
+  Scalar::Util: 0
+  Test::Fatal: 0
+  Test::JSON: 0
 configure_requires:
-  Module::Build: '0'
+  Module::Build: 0
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4205, CPAN::Meta::Converter version 2.150005'
+generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: '1.4'
+  version: 1.4
 name: App-MFILE-WWW
 provides:
   App::MFILE::WWW:
     file: lib/App/MFILE/WWW.pm
-    version: '0.152'
+    version: 0.153
   App::MFILE::WWW::Dispatch:
     file: lib/App/MFILE/WWW/Dispatch.pm
+    version: 0
   App::MFILE::WWW::Resource:
     file: lib/App/MFILE/WWW/Resource.pm
+    version: 0
 requires:
-  App::CELL: '0.194'
-  App::MFILE: '0.17'
-  File::ShareDir: '1.00'
-  File::Temp: '0'
-  Getopt::Long: '0'
-  JSON: '0'
-  LWP::UserAgent: '0'
-  Log::Any::Adapter: '0'
-  Params::Validate: '1.06'
-  Plack::Builder: '0'
-  Plack::Middleware::Session: '0'
-  Plack::Middleware::StackTrace: '0'
-  Plack::Middleware::Static: '0'
-  Plack::Runner: '0'
-  Plack::Session: '0'
-  Scalar::Util: '0'
-  Try::Tiny: '0'
-  Web::Machine: '0.15'
-  perl: '5.012'
+  App::CELL: 0.194
+  App::MFILE: 0.17
+  File::ShareDir: 1.00
+  File::Temp: 0
+  Getopt::Long: 0
+  JSON: 0
+  LWP::UserAgent: 0
+  Log::Any::Adapter: 0
+  Params::Validate: 1.06
+  Plack::Builder: 0
+  Plack::Middleware::Session: 0
+  Plack::Middleware::StackTrace: 0
+  Plack::Middleware::Static: 0
+  Plack::Runner: 0
+  Scalar::Util: 0
+  Try::Tiny: 0
+  Web::Machine: 0.15
+  perl: 5.012
 resources:
-  license: http://opensource.org/licenses/bsd-license.php
-version: '0.152'
-x_serialization_backend: 'CPAN::Meta::YAML version 0.012'
+  license: http://opensource.org/licenses/BSD-3-Clause
+version: 0.153
